tests/compiletests/ui/spirv-attr/bool-inputs-err.stderr
error: entry-point parameter cannot contain `bool`s
   --> $DIR/bool-inputs-err.rs:
    |
    |     input: bool,
    |            ^^^^

error: entry-point parameter cannot contain `bool`s
   --> $DIR/bool-inputs-err.rs:
    |
    |     output: &mut bool,
    |             ^^^^^^^^^

error: entry-point parameter cannot contain `bool`s
   --> $DIR/bool-inputs-err.rs:
    |
    |     #[spirv(push_constant)] push: &bool,
    |                                   ^^^^^

error: entry-point parameter cannot contain `bool`s
   --> $DIR/bool-inputs-err.rs:
    |
    |     #[spirv(uniform)] uniform: &Boolthing,
    |                                ^^^^^^^^^^

error: aborting due to 4 previous errors

